--- a/Grill.html
+++ b/Grill.html
@@ -24,5 +24,29 @@
         </div>
         </div>    
     </header>
+
+    <main>
+        <section class="intro">
+            <h2>Browse Products</h2>
+            <p>X Items</p>
+        </section>
+
+        <section class="product-grid">
+            <article class="product">
+                <figure>
+                    <img src="image-url.jpg" alt="Product name">
+                    <button class="wishilst">@</button>
+                </figure>
+                <div class="product-info">
+                    <h3>Product Title</h3>
+                    <p>Short description</p>
+                    <div class="product-meta">
+                        <span class="price">110฿</span>
+                        <span class="category">Pants</span>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
