--- a/Grill.html
+++ b/Grill.html
@@ -48,5 +48,27 @@
             </article>
         </section>
     </main>
+
+    <footer>
+        <section class="newsletter">
+            <h4>Join Our Fans, Get 30% Off For This Month</h4>
+            <form>
+                <input type="email" placeholder="Enter your email">
+                <button type="submit">summit</button>
+            </form>
+            <p>By summiting your email...</p>
+        </section>
+        
+        <section class="footer-links">
+            <div class="help">...</div>
+            <div class="join">...</div>
+        </section>
+
+        <section class="copyright">
+            <p>© 2025 Grill-commerce. All rights reserved.</p>
+        </section>
+     </footer>
+
+
 </body>
 </html>
