--- a/Grill.html
+++ b/Grill.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grill-Browse</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container header-row">
             <div class="logo">
-                <h1>Grill-commerce</h1>
+                <h1>YDP.</h1>
             </div>
         <nav>
             <ul>
@@ -20,7 +22,7 @@
             </ul>
         </nav>
         <div class="item-count">
-            <p>X Items</p>
+            <p>10 Items</p>
         </div>
         </div>    
     </header>
