--- a/Grill.html
+++ b/Grill.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+<!--=====Header Section===== -->
 <body>
     <header>
         <div class="container header-row">
             <div class="logo">
-                <h1>YDP.</h1>
+                <h1>Grill.</h1>
             </div>
         <nav>
             <ul>
@@ -26,13 +27,13 @@
         </div>
         </div>    
     </header>
-
+<!-- =====Product Grid Section===== -->
     <main>
         <section class="intro">
             <h2>Browse Products</h2>
             <p>X Items</p>
         </section>
-
+<!-- ======Box 1=====-->
         <section class="product-grid">
             <article class="product">
                 <figure>
@@ -48,7 +49,72 @@
                     </div>
                 </div>
             </article>
-        </section>
+        
+
+<!-- =====Box 2=====-->
+            <article class="product">
+                <figure>
+                    <img src="image-url.jpg" alt="Product name">
+                    <button class="wishilst">@</button>
+                </figure>
+                <div class="product-info">
+                    <h3>Product Title</h3>
+                    <p>Short description</p>
+                    <div class="product-meta">
+                        <span class="price">110฿</span>
+                        <span class="category">Pants</span>
+                    </div>
+                </div>
+            </article>
+
+<!-- =====Box 3=====-->
+            <article class="product">
+                <figure>
+                    <img src="image-url.jpg" alt="Product name">
+                    <button class="wishilst">@</button>
+                </figure>
+                <div class="product-info">
+                    <h3>Product Title</h3>
+                    <p>Short description</p>
+                    <div class="product-meta">
+                        <span class="price">110฿</span>
+                        <span class="category">Pants</span>
+                    </div>
+                </div>
+            </article>            
+<!-- =====Box 4=====-->
+            <article class="product">
+                <figure>
+                    <img src="image-url.jpg" alt="Product name">
+                    <button class="wishilst">@</button>
+                </figure>
+                <div class="product-info">
+                    <h3>Product Title</h3>
+                    <p>Short description</p>
+                    <div class="product-meta">
+                        <span class="price">110฿</span>
+                        <span class="category">Pants</span>
+                    </div>
+                </div>
+            </article>           
+      
+<!-- =====Box 5=====-->
+            <article class="product">
+                <figure>
+                    <img src="image-url.jpg" alt="Product name">
+                    <button class="wishilst">@</button>
+                </figure>
+                <div class="product-info">
+                    <h3>Product Title</h3>
+                    <p>Short description</p>
+                    <div class="product-meta">
+                        <span class="price">110฿</span>
+                        <span class="category">Pants</span>
+                    </div>
+                </div>
+            </article>
+        </section>        
+
     </main>
 
     <footer>
