--- a/Grill.html
+++ b/Grill.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="item-count">
-            <p>10 Items</p>
+            <p>20 Items</p>
         </div>
         </div>    
     </header>
@@ -31,7 +31,7 @@
     <main>
         <section class="intro">
             <h2>Browse Products</h2>
-            <p>X Items</p>
+            <p>20 Items</p>
         </section>
 <!-- ======Box 1=====-->
         <section class="product-grid">
@@ -44,7 +44,7 @@
                     <h3>Product Title</h3>
                     <p>Short description</p>
                     <div class="product-meta">
-                        <span class="price">110฿</span>
+                        <span class="price">$</span>
                         <span class="category">Pants</span>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <h3>Product Title</h3>
                     <p>Short description</p>
                     <div class="product-meta">
-                        <span class="price">110฿</span>
+                        <span class="price">110$</span>
                         <span class="category">Pants</span>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                     <h3>Product Title</h3>
                     <p>Short description</p>
                     <div class="product-meta">
-                        <span class="price">110฿</span>
+                        <span class="price">110$</span>
                         <span class="category">Pants</span>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                     <h3>Product Title</h3>
                     <p>Short description</p>
                     <div class="product-meta">
-                        <span class="price">110฿</span>
+                        <span class="price">110$</span>
                         <span class="category">Pants</span>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <h3>Product Title</h3>
                     <p>Short description</p>
                     <div class="product-meta">
-                        <span class="price">110฿</span>
+                        <span class="price">110$</span>
                         <span class="category">Pants</span>
                     </div>
                 </div>
