--- a/Grill.html
+++ b/Grill.html
@@ -117,25 +117,48 @@
 
     </main>
 
-    <footer>
-        <section class="newsletter">
-            <h4>Join Our Fans, Get 30% Off For This Month</h4>
-            <form>
-                <input type="email" placeholder="Enter your email">
-                <button type="submit">summit</button>
-            </form>
-            <p>By summiting your email...</p>
-        </section>
-        
-        <section class="footer-links">
-            <div class="help">...</div>
-            <div class="join">...</div>
-        </section>
+<footer>
+    <div class="container footer-grid">
 
-        <section class="copyright">
-            <p>© 2025 Grill-commerce. All rights reserved.</p>
-        </section>
-     </footer>
+    <!-- (A) Newsletter -->
+    <section class="newsletter">
+      <h4>Join Our Fans, Get 30% Off For This Month</h4>
+      <form>
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Submit</button>
+      </form>
+      <p class="note">By submitting your email, you agree to receive news from Grill-commerce.</p>
+    </section>
+
+    <!-- (B) Footer Links -->
+    <section class="footer-links">
+      <div>
+        <h5>Help & Support</h5>
+        <ul>
+          <li><a href="#">Orders & Shipping</a></li>
+          <li><a href="#">Returns & Refunds</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h5>Join Up</h5>
+        <ul>
+          <li><a href="#">Modimal Club</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Visit Us</a></li>
+        </ul>
+      </div>
+    </section>
+  </div>
+
+  <!-- (C) Copyright -->
+  <section class="copyright">
+    <p>© 2025 Grill-commerce. All rights reserved.</p>
+  </section>
+</footer>
+
 
 <script src="script.js"></script>
 </body>
